--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="Author" content="Jose, Deborah, Flo">
+    <meta name="Description" content="Global Warming Cause">
+    <title>Stop Global Warming!</title>
 </head>
 <body>
     
+
+    
+
+
+
+
+
+
 </body>
 </html>
