Added header and body 1/3 done

--- a/Greenhouse.html
+++ b/Greenhouse.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Jose, Deborah, Flo">
     <meta name="Description" content="Greenhouse Gases">
     <title>Greenhouse Gases and How they Affect Us</title>
+    <link rel="stylesheet" href="Greenhouse.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1>Understanding Greenhouse Gases</h1>
+        <nav>
+            <a href="Greenhouse.html">Greenhouse Gases</a>
+            <a href=".html">Deforestation</a>
+            <a href=".html">Unknown</a>
+        </nav>
+    </header>
+
+    <main>
+        <section class="intro">
+            <h2>Main Greenhouse Gases</h2>
+            <ul>
+                <li><strong>Carbon Dixoide (CO2):</strong> Released by burning fossil fuel such as oil, gas and coal.
+                </li>
+                <li><strong>Fluorinated Gases:</strong>Man-Made gases primarily used in industrial processes, refrigeration, and various consumer products.</li>
+            </ul>
+        </section>
+    </main>
 </body>
+
 </html>
