Greenhouse CSS and HTML completed
Need to add the 2 pages needed

--- a/Greenhouse.html
+++ b/Greenhouse.html
@@ -22,12 +22,38 @@
 
     <main>
         <section class="intro">
+            <h2>What is the Definiton of Greenhouse Gases?</h2>
+            <p>Greenhouse gases, commonly referred to as 'GHGs,' are gases present in Earth's atmosphere that trap heat.
+                They allow sunlight to enter but prevent some heat from escaping, similar to the function of a
+                greenhouse.</p>
+        </section>
+
+        <section class="gases">
             <h2>Main Greenhouse Gases</h2>
             <ul>
                 <li><strong>Carbon Dixoide (CO2):</strong> Released by burning fossil fuel such as oil, gas and coal.
                 </li>
-                <li><strong>Fluorinated Gases:</strong>Man-Made gases primarily used in industrial processes, refrigeration, and various consumer products.</li>
-            </ul>
+
+                <li><strong>Fluorinated Gases:</strong> Man-Made gases primarily used in industrial processes,
+                    refrigeration, and various consumer products.</li>
+
+                <li><strong>Nitrous Oxide (N20):</strong> Are emissions are released through agricultural practices,
+                    especially fertilizer application, industrial activities, and the burning of fossil fuels and solid
+                    waste.</li>
+           
+            <li><strong>Sulphur Hexafluoride (SF6):</strong> Is asynthetic gas primarily used for insulating electrical
+                equipment, it is also a potent greenhouse gas. This gas is colorless, odorless, non-toxic, and
+                non-flammable.
+            </li>
+             </ul>
+        </section>
+
+        <section class="cta">
+            <h2>What Can You Do??</h2>
+            <p>Reducing your carbon footprint can make a significant difference. Conserve energy, choose a more
+                plant-based diet, drive less, and support clean energy initiatives! </p>
+
+
         </section>
     </main>
 </body>
