--- a/Greenhouse.html
+++ b/Greenhouse.html
@@ -14,9 +14,9 @@
     <header>
         <h1>Understanding Greenhouse Gases</h1>
         <nav>
+            <a href="index.html">Farming</a>
             <a href="Greenhouse.html">Greenhouse Gases</a>
-            <a href=".html">Deforestation</a>
-            <a href=".html">Unknown</a>
+            <a href="Deforestation.html">Deforestation</a>
         </nav>
     </header>
 
@@ -40,12 +40,13 @@
                 <li><strong>Nitrous Oxide (N20):</strong> Are emissions are released through agricultural practices,
                     especially fertilizer application, industrial activities, and the burning of fossil fuels and solid
                     waste.</li>
-           
-            <li><strong>Sulphur Hexafluoride (SF6):</strong> Is asynthetic gas primarily used for insulating electrical
-                equipment, it is also a potent greenhouse gas. This gas is colorless, odorless, non-toxic, and
-                non-flammable.
-            </li>
-             </ul>
+
+                <li><strong>Sulphur Hexafluoride (SF6):</strong> Is asynthetic gas primarily used for insulating
+                    electrical
+                    equipment, it is also a potent greenhouse gas. This gas is colorless, odorless, non-toxic, and
+                    non-flammable.
+                </li>
+            </ul>
         </section>
 
         <section class="cta">
