--- a/Greenhouse.html
+++ b/Greenhouse.html
@@ -14,7 +14,8 @@
     <header>
         <h1>Understanding Greenhouse Gases</h1>
         <nav>
-            <a href="index.html">Farming</a>
+            <a href="index.html">Home</a>
+            <a href="farming.html">Farming</a>
             <a href="Greenhouse.html">Greenhouse Gases</a>
             <a href="Deforestation.html">Deforestation</a>
         </nav>
