--- a/Deforestation.html
+++ b/Deforestation.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name= "Global Warming Causes" content="Deborah, Florencio, Jose">
-    <meta name = "Description"  content= "Deforestation Cause">
-    <a href="Logo" ref = "image.png"></a>
-    <link rel="stylesheet" href="Deforestation.css">
-    <title>Deforestion</title>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="Gobal Warming" content = "Deborah, Florencio, Jose">
+  <title>Deforestation</title>
+  <link rel="icon" href="image.png" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"/>
+  <link rel="stylesheet" href="Deforestation.css" />
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
 </head>
+
+
+<nav class="navbar navbar-expand-lg">
+  <a href="index.html">Home</a>
+  <a href="farming.html">Farming</a>
+  <a href="Greenhouse.html">Greenhouse Gases</a>
+  <a href="Deforestation.html">Deforestation</a>
+</nav>
+
 <body>
-    </h1> What is Deforestation? </h1>
-    <p> </p>
+  <div class="DeforestationOverlay-content">
+    <p><h1> Deforestation </h1>
+    </div>
+    
+    <div class="DeforestationVideoBG">
+      <video autoplay muted loop id="myVideo">
+        <source src="Deforestation.mp4" type="video/mp4"/>
+      </video>
+    </div>
+
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+<div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="..." alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
 </body>
 </html>
