Completed Index HTML and CSS class

--- a/Greenhouse.html
+++ b/Greenhouse.html
@@ -27,6 +27,8 @@
             <p>Greenhouse gases, commonly referred to as 'GHGs,' are gases present in Earth's atmosphere that trap heat.
                 They allow sunlight to enter but prevent some heat from escaping, similar to the function of a
                 greenhouse.</p>
+                <img src="greenhouse-gases.png" alt="GreenhouseGases " class="responsive-img">
+        </section>
         </section>
 
         <section class="gases">
