--- a/index.html
+++ b/index.html
@@ -1,20 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Jose, Deborah, Flo">
     <meta name="Description" content="Global Warming Cause">
     <title>Stop Global Warming!</title>
-    
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-    <a href="farming.html">farming</a>
+
+    <header>
+        <h1>Understanding Global Warming</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="farming.html">Farming</a>
+            <a href="Greenhouse.html">Greenhouse Gases</a>
+            <a href="Deforestation.html">Deforestation</a>
+        </nav>
+    </header>
+
+    <main>
+        <section class="intro">
+            <h2>Why This Matters</h2>
+            <p>Our planet is facing an environmental crisis driven by human activity. From the release of greenhouse
+                gases that trap heat in the atmosphere, to the destruction of forests and unsustainable farming
+                practices, our actions are accelerating climate change at an alarming rate.</p>
+
+            <p>This matters because climate change affects everyone — rising temperatures lead to more extreme weather
+                events, rising sea levels, food insecurity, and the loss of biodiversity. Communities around the world,
+                especially the most vulnerable, are already experiencing the devastating effects of this crisis.</p>
+            <img src="earth-warning.jpg" alt="Illustration of the Earth heating up" class="responsive-img">
+        </section>
 
 
 
+        <section class="topics">
+            <h2>Explore the Issues</h2>
+            <ul>
+                <li><strong>Greenhouse Gases</strong></a>: Learn how gases like CO₂ and
+                    methane trap heat in our atmosphere.</li>
+                <li><strong>Deforestation</strong></a>: Discover how tree loss disrupts
+                    ecosystems and accelerates climate change.</li>
+                <li><strong>Farming</strong></a>: See how industrial agriculture contributes to
+                    emissions, soil depletion, and biodiversity loss.</li>
+            </ul>
+        </section>
 
+        <section class="cta">
+            <h2>Join the Movement!</h2>
+            <p>Every action matters — from planting trees to reducing emissions. Visit our pages to learn more and
+                help
+                us raise awareness for a greener future!
+            </p>
+        </section>
+    </main>
 
 
 </body>
+
 </html>
