--- a/farming.html
+++ b/farming.html
@@ -8,10 +8,26 @@
     <link rel="stylesheet" href="farming.css">
     <title>Greenhouse Gases and How they Affect Us</title>
 </head>
-<body>
-    <h1 class="farming-header">
-        Did You know that Farming Live Stock is Harmfull To Our Planet?
-    </h1>
-
+    <body>
+        <main class="farming-main">
+            <header>
+            <h1>Did You know that Farming Live Stock is Harmfull To Our Planet?</h1>
+            <nav>
+                <a href="index.html">Farming</a>
+                <a href="Greenhouse.html">Greenhouse Gases</a>
+                <a href="Deforestation.html">Deforestation</a>
+            </nav>
+        </header>
+            <img src="Images/cow.png" alt="picture of cow" class="farming-cow"/>
+            <section class="farming-list-container">
+                <ul class="farming-items">
+                    <li class="farming-item">Animal agriculture produces 65% of the world's nitrous oxide emissions which has a global warming impact 296 times greater than carbon dioxide</li>
+                    <li class="farming-item">Producing feed for livestock requires energy for fertilizer production, transportation, and other processes, all of which can contribute to greenhouse gas emissions</li>
+                    <li class="farming-item">Overgrazing and poor land management practices can degrade soil, reducing its ability to store carbon</li>
+                </ul>
+            </section>
+        </main>
+    </body>
+    
 </body>
 </html>
