--- a/farming.html
+++ b/farming.html
@@ -13,18 +13,29 @@
             <header>
             <h1>Did You know that Farming Live Stock is Harmfull To Our Planet?</h1>
             <nav>
-                <a href="index.html">Farming</a>
+                <a href="index.html">Home</a>
+                <a href="farming.html">Farming</a>
                 <a href="Greenhouse.html">Greenhouse Gases</a>
                 <a href="Deforestation.html">Deforestation</a>
             </nav>
         </header>
             <img src="Images/cow.png" alt="picture of cow" class="farming-cow"/>
-            <section class="farming-list-container">
+            <section class="farming-how-container">
+                <h2 class="farming-how-header">How is this happening?</h2>
                 <ul class="farming-items">
                     <li class="farming-item">Animal agriculture produces 65% of the world's nitrous oxide emissions which has a global warming impact 296 times greater than carbon dioxide</li>
                     <li class="farming-item">Producing feed for livestock requires energy for fertilizer production, transportation, and other processes, all of which can contribute to greenhouse gas emissions</li>
                     <li class="farming-item">Overgrazing and poor land management practices can degrade soil, reducing its ability to store carbon</li>
                 </ul>
+            </section>
+            <section class="farming-midigate-container">
+                <h2 class="farming-midigate-header">What Can We Do?</h2>
+                    <ul class="farming-midigate-list">
+                        <li>Implementing energy-saving measures on farms, such as using timers and sensors on equipment, can reduce energy consumption and associated emissions</li>
+                        <li>Energy Efficiency: Implementing energy-saving measures on farms, such as using timers and sensors on equipment, can reduce energy consumption and associated emissions</li>
+                        <li>Breeding animals with lower methane emissions can be a long-term solution</li>
+                    </ul>
+                <p class="farming-midigate-text"></p>
             </section>
         </main>
     </body>
